www/css/style.css
table {
    border-collapse: collapse;
}

table tr th, table tr td {
    padding: 6px;
    vertical-align: middle;
    text-align: left;
}

form {
    margin: 10px 0;
}

label {
    font-weight: bold;
    padding: 0 12px;
    line-height: 46px;
}

input[type="date"] {
    display: inline;
    border: 1px #C0C0C0 solid;
    padding: 0 12px;
    margin-right: 12px;
    height: 46px;
}

.form-error {
    padding: 4px 12px;
    color: red;
}

.nav-bar-title {
    width: 100%;
}

.nav-bar-title img {
    float: left;
}

.nav-bar-title span {
    text-align: center;
}

.padding-left {
    padding-left: 15px;
}

.green {
    border-left: 10px #008000 solid;
    border-top: 3px #008000 solid;
}

.red {
    border-left: 10px #dc143c solid;
    border-top: 3px #dc143c solid;
}

.yellow {
    border-left: 10px #ffd700 solid;
    border-top: 3px #ffd700 solid;
}

.white {
    border-left: 1px #ffffff solid;
    border-top: 1px #000000 solid;
}

.blue {
    border-left: 10px #0000cd solid;
    border-top: 3px #0000cd solid;
}

.green-background {
    background: rgba(0, 128, 0, .1);
}

.red-background {
    background: rgba(220, 20, 60, .1);
}

.yellow-background {
    background: rgba(255, 215, 0, .2);
}

.white-background {
    background: rgba(0, 0, 0, .1);
}

.blue-background {
    background: rgba(0, 0, 205, .1);
}

